test_regress/t/t_stream_bad.out
%Error: t/t_stream_bad.v:12:32: Expecting expression to be constant, but can't convert a RAND to constant.
                              : ... note: In instance 't'
   12 |    initial packed_data_32 = {<<$random{byte_in}};
      |                                ^~~~~~~
%Error: t/t_stream_bad.v:12:30: Slice size isn't a constant or basic data type.
                              : ... note: In instance 't'
   12 |    initial packed_data_32 = {<<$random{byte_in}};
      |                              ^~
%Error: Exiting due to
